add: style root

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   .nav-link{
     @apply text-color-description hover:!text-color-primary ;
   }
-  *{
+  :root{
     @apply font-opensans ;
   }
   h1,h2,h3,h4,h4,h6{
