--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
     @apply font-opensans ;
   }
   h1,h2,h3,h4,h4,h6{
-    @apply font-bold
+    @apply font-bold leading-[50px]
   }
   h1{
     @apply text-[40px] ;
