--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   :root{
     @apply font-opensans ;
   }
-  h1,h2,h3,h4,h4,h5,h6{
+  h1,h2,h3,h4,h5,h6{
     @apply font-bold leading-[50px]
   }
   h1{
